# portal

./: .gitignore  Makefile  docker-compose.yml
.github/workflows/: deploy.yaml
auth/: Dockerfile  compose.yaml  pom.xml
auth/dumps/: main.sql
event/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
event/dumps/: main.sql
event/src/: app.py
event/src/api/: router.py
event/src/api/v1/: auth.py  events.py  router.py
event/src/database/: file_storage.py  models.py
event/src/schemas/: auth.py  event.py  registration.py
event/src/service/: auth.py  event.py  registration.py
event/src/utils/: migrate.py
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  vite-env.d.ts
frontend/src/components/: Header.vue
frontend/src/router/: index.ts
frontend/src/services/: AuthService.ts  EventData.ts  EventParticipantsData.ts  EventsListData.ts  HomeData.ts
frontend/src/stores/: auth.ts  popups.ts
frontend/src/types/: event.ts  fetchingModule.ts  loading.ts  loginSchema.ts  registerSchema.ts  socialNetworks.ts  ticket.ts  user.ts
frontend/src/views/: EventOverviewView.vue  (+5 more)
hydra-auth-service/: README.md
hydra-event-service/: .env  Dockerfile  Makefile  pyproject.toml
hydra-event-service/dumps/: main.sql
hydra-event-service/src/: app.py  settings.py
hydra-event-service/src/api/v1/: router.py
hydra-event-service/src/schemas/: auth.py
hydra-event-service/src/service/: auth.py  event.py  sport_type.py
hydra-event-service/src/utils/: populate.py
hydra-frontend/: README.md
(+82 files in other folders)
