[tool.poetry]
name = "src"
version = "0.0.0"
description = ""
authors = ["Beaver <beavernotacat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
SQLAlchemy = "^2.0.26"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
fastapi-storages = "^0.2.1"
fastapi-filter = "^1.1.0"
httpx = "^0.26.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.2"
black = "^24.2.0"
isort = "^5.8.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
