[tool.poetry]
name = "ghidra-event-service"
version = "0.0.0"
description = ""
authors = ["Beaver <beavernotacat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
SQLAlchemy = "^2.0.26"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
fastapi-storages = "^0.2.1"
fastapi-filter = "^1.1.0"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
